<resources>
    <string name="app_name">Tethr</string>
    <string name="accessibility_service_label">Tethr Auto Enable</string>
    <string name="tether_service_description">This service allows Tether to automatically enable the selected tether mode. It only runs in the settings menu after the Tethr app has been enabled.</string>
    <string name="wifi">Wi-Fi Tethering</string>
    <string name="wifi_hint">Enable portable Wi-Fi hotspot</string>
    <string name="usb">USB Tethering</string>
    <string name="usb_hint">Tether over USB Ethernet</string>
    <string name="bluetooth">Bluetooth Tethering</string>
    <string name="bluetooth_hint">Share internet over Bluetooth</string>
    <string name="none_refresh">Refresh Network</string>
    <string name="none_refresh_hint">Restart cellular modem without tethering</string>
    <string name="settings">Settings</string>
    <string name="settings_hint">Open tethering settings page</string>
    <string name="menu_about">About</string>
    <string name="menu_service">Service Settings</string>
    <string name="loading_message">Restarting cellular modem, please wait..</string>
    <string name="loading_title">Resetting</string>
    <string name="app_description">Tether all the things!</string>
    <string name="app_credits">by lanrat https://twitter.com/lanrat</string>
    <string name="service_dialog_cancel">Cancel</string>
    <string name="service_dialog_ok">OK</string>
    <string name="service_dialog_message">
        Tethr requires the use of an accessibility service to work.
        The accessibility service is used to automatically toggle tethering in the system settings at just the right time.
        Please enable the Tethr Auto Enable accessibility service to enable this automation.
        \n\n
        If your device has a boot password enabled, enabling an accessibility service may temporarily disable it.
        If this happens, just go back into your system settings after enabling the service to re-enable the boot password.
    </string>
</resources>
