<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background_color"
    tools:context="com.vorsk.tethr.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/card_usb"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                app:cardUseCompatPadding="true"
                android:theme="@style/CardViewStyle">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/usb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/theme_color"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:textSize="20sp"/>

                    <TextView
                        android:text="@string/usb_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:textSize="12sp"/>

                    <ImageView
                        android:src="@drawable/usb"
                        android:layout_height="40dp"
                        android:layout_width="wrap_content"
                        android:adjustViewBounds="true"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_wifi"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                app:cardUseCompatPadding="true"
                android:theme="@style/CardViewStyle">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/wifi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/theme_color"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:textSize="20sp"/>

                    <TextView
                        android:text="@string/wifi_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:textSize="12sp"/>

                    <ImageView
                        android:src="@drawable/wifi"
                        android:layout_height="40dp"
                        android:layout_width="wrap_content"
                        android:adjustViewBounds="true"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_bluetooth"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                app:cardUseCompatPadding="true"
                android:theme="@style/CardViewStyle">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/bluetooth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/theme_color"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:textSize="20sp"/>

                    <TextView
                        android:text="@string/bluetooth_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:textSize="12sp"/>

                    <ImageView
                        android:src="@drawable/bluetooth"
                        android:layout_height="40dp"
                        android:layout_width="wrap_content"
                        android:adjustViewBounds="true"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_refresh"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                app:cardUseCompatPadding="true"
                android:theme="@style/CardViewStyle">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/none_refresh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/theme_color"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:textSize="20sp"/>

                    <TextView
                        android:text="@string/none_refresh_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:textSize="12sp"/>

                    <ImageView
                        android:src="@drawable/refresh"
                        android:layout_height="40dp"
                        android:layout_width="wrap_content"
                        android:adjustViewBounds="true"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_settings"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                app:cardUseCompatPadding="true"
                android:theme="@style/CardViewStyle">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/settings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/theme_color"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:textSize="20sp"/>

                    <TextView
                        android:text="@string/settings_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:textSize="12sp"/>

                    <ImageView
                        android:src="@drawable/settings"
                        android:layout_height="40dp"
                        android:layout_width="wrap_content"
                        android:adjustViewBounds="true"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

</ScrollView>
